--- a/.gitattributes
+++ b/.gitattributes
@@ -1,29 +1,32 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+* text=auto eol=lf
 
-# Custom mappings for file types
-*.gd text eol=lf
-*.tscn text eol=lf
-*.tres text eol=lf
-*.md text eol=lf
-*.json text eol=lf
-*.cfg text eol=lf
+*.gd    text eol=lf
+*.tscn  text eol=lf
+*.tres  text eol=lf
+*.md    text eol=lf
+*.json  text eol=lf
+*.cfg   text eol=lf
+*.import text eol=lf
 
-# Binary files (do not modify line endings)
-*.png binary
-*.jpg binary
-*.jpeg binary
-*.svg binary
-*.ttf binary
-*.otf binary
-*.wav binary
-*.ogg binary
-*.mp3 binary
+*.png   binary
+*.jpg   binary
+*.jpeg  binary
+*.svg   binary
+*.ttf   binary
+*.otf   binary
+*.wav   binary
+*.ogg   binary
+*.mp3   binary
+*.stex  binary
+*.ctex  binary
 
-# Ignore these files when generating an archive (e.g. Download ZIP from GitHub)
+/** export-ignore
+/addons/      !export-ignore
+/addons/** !export-ignore
+
+README.md     !export-ignore
+LICENSE       !export-ignore
+
 .gitattributes export-ignore
-.gitignore export-ignore
-.github/ export-ignore
-README.md export-ignore
-LICENSE export-ignore
-
+.gitignore     export-ignore
+.github/       export-ignore
